--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.14",
+		"@heroicons/react": "^2.0.17",
+		"@tauri-apps/api": "^1.3.0",
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
