--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -17,7 +17,10 @@ tauri-build = { version = "1.3.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.3.0", features = ["fs-all"] }
+tauri = { version = "1.3.0", features = ["dialog-open", "fs-all", "protocol-asset"] }
+regex = "1.8.1"
+jsondata = "0.8.1"
+bincode = "1.3.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
