schema folder + download schema

--- a/tauri/packUI.config.json
+++ b/tauri/packUI.config.json
@@ -1,1 +1,4 @@
-{"$schema":"https://raw.githubusercontent.com/thijnmens/PackUI/main/tauri/packUI.schema.json","customSongsFolder":"E:\\SteamLibrary\\steamapps\\common\\A Dance of Fire and Ice\\CustomSongs"}
+{
+	"$schema": "https://raw.githubusercontent.com/thijnmens/PackUI/main/schemas/packUI.config.schema.json",
+	"customSongsFolder": "E:\\SteamLibrary\\steamapps\\common\\A Dance of Fire and Ice\\CustomSongs"
+}
