pack download + info

--- a/tauri/packUI.config.json
+++ b/tauri/packUI.config.json
@@ -1,4 +1,5 @@
 {
 	"$schema": "https://raw.githubusercontent.com/thijnmens/PackUI/main/schemas/packUI.config.schema.json",
-	"customSongsFolder": "E:\\SteamLibrary\\steamapps\\common\\A Dance of Fire and Ice\\CustomSongs"
+	"customSongsFolder": "E:\\SteamLibrary\\steamapps\\common\\A Dance of Fire and Ice\\CustomSongs",
+	"sources": ["https://be.t21c.kro.kr/packui", "https://cdn.packui.net/api/example"]
 }
