--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -21,6 +21,8 @@ tauri = { version = "1.3.0", features = ["dialog-open", "fs-all", "protocol-asse
 regex = "1.8.1"
 jsondata = "0.8.1"
 bincode = "1.3.3"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
