--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.7.14",
 		"@heroicons/react": "^2.0.17",
+		"@ramonak/react-progress-bar": "^5.0.3",
 		"@tauri-apps/api": "^1.3.0",
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.6",
@@ -25,6 +26,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
+		"reactjs-popup": "^2.0.5",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
 	},
