--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.6",
     "jsonrepair": "^3.2.0",
+    "jsonschema": "^1.4.1",
     "next": "^12.3.4",
     "nextron": "^8.5.0",
     "node-fetch": "^3.3.1",
@@ -42,7 +43,7 @@
     "react-icons": "^4.9.0",
     "react-tag-input": "^6.8.1",
     "reactjs-popup": "^2.0.5",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   }
 }
