--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["renderer/components/*"],
+      "@classes/*": ["main/classes/*"],
+      "@helpers/*": ["main/helpers/*"]
+    }
   },
   "exclude": [
     "node_modules",
