--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.2.5",
     "autoprefixer": "^10.4.7",
+    "decompress": "^4.2.1",
+    "download": "^8.0.0",
     "electron": "^21.3.3",
     "electron-builder": "^23.6.0",
     "electron-log": "^5.0.0-beta.24",
@@ -30,6 +32,7 @@
     "electron-store": "^8.1.0",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.6",
+    "folder-hash": "^4.0.4",
     "jsonrepair": "^3.2.0",
     "jsonschema": "^1.4.1",
     "next": "^12.3.4",
