--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^4.9.0",
     "react-tag-input": "^6.8.1",
     "reactjs-popup": "^2.0.5",
+    "sprintf-js": "^1.1.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   }
