--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: languages/*.lang
-    translation: '%locale_with_underscore%.lang'
+  - source: /languages/*.lang
+    translation: /languages/%locale_with_underscore%.lang
