--- a/package.json
+++ b/package.json
@@ -1,54 +1,58 @@
 {
-  "name": "packui",
-  "version": "1.0.0",
-  "author": "Thijnmens <thijnmens@gmail.com>",
-  "main": "app/background.js",
-  "scripts": {
-    "dev": "nextron --run-only",
-    "kill": "taskkill /F /IM \"node.exe\"",
-    "build": "nextron build",
-    "build:all": "nextron build --all",
-    "build:win32": "nextron build --win --ia32",
-    "build:win64": "nextron build --win --x64",
-    "build:mac": "nextron build --mac --x64",
-    "build:linux": "nextron build --linux",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
-    "@ramonak/react-progress-bar": "^5.0.3",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.2.5",
-    "autoprefixer": "^10.4.7",
-    "decompress": "^4.2.1",
-    "download": "^8.0.0",
-    "electron": "^21.3.3",
-    "electron-builder": "^23.6.0",
-    "electron-log": "^5.0.0-beta.24",
-    "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0",
-    "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.6",
-    "folder-hash": "^4.0.4",
-    "jsonrepair": "^3.2.0",
-    "jsonschema": "^1.4.1",
-    "next": "^12.3.4",
-    "nextron": "^8.5.0",
-    "node-fetch": "^3.3.1",
-    "postcss": "^8.4.13",
-    "react": "^18.2.0",
-    "react-dnd": "^14.0.2",
-    "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^18.2.0",
-    "react-dropdown": "^1.11.0",
-    "react-icons": "^4.9.0",
-    "react-tag-input": "^6.8.1",
-    "reactjs-popup": "^2.0.5",
-    "sprintf-js": "^1.1.2",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.4"
-  }
+	"name": "packui",
+	"version": "1.0.0",
+	"author": "Thijnmens <thijnmens@gmail.com>",
+	"main": "app/background.js",
+	"scripts": {
+		"dev": "nextron --run-only",
+		"kill": "taskkill /F /IM \"node.exe\"",
+		"build": "nextron build",
+		"build:all": "nextron build --all",
+		"build:win32": "nextron build --win --ia32",
+		"build:win64": "nextron build --win --x64",
+		"build:mac": "nextron build --mac --x64",
+		"build:linux": "nextron build --linux",
+		"postinstall": "electron-builder install-app-deps",
+		"prepare": "husky install"
+	},
+	"devDependencies": {
+		"@headlessui/react": "^1.7.15",
+		"@heroicons/react": "^2.0.18",
+		"@ramonak/react-progress-bar": "^5.0.3",
+		"@types/node": "^18.11.18",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.2.5",
+		"autoprefixer": "^10.4.7",
+		"decompress": "^4.2.1",
+		"download": "^8.0.0",
+		"electron": "^21.3.3",
+		"electron-builder": "^23.6.0",
+		"electron-log": "^5.0.0-beta.24",
+		"electron-serve": "^1.1.0",
+		"electron-store": "^8.1.0",
+		"eslint": "^8.43.0",
+		"eslint-config-next": "^13.4.6",
+		"folder-hash": "^4.0.4",
+		"husky": "^8.0.3",
+		"jsonrepair": "^3.2.0",
+		"jsonschema": "^1.4.1",
+		"lint-staged": "^13.2.3",
+		"next": "^12.3.4",
+		"nextron": "^8.5.0",
+		"node-fetch": "^3.3.1",
+		"postcss": "^8.4.13",
+		"prettier": "2.8.8",
+		"prettier-plugin-tailwindcss": "0.3.0",
+		"react": "^18.2.0",
+		"react-dnd": "^14.0.2",
+		"react-dnd-html5-backend": "^14.0.0",
+		"react-dom": "^18.2.0",
+		"react-dropdown": "^1.11.0",
+		"react-icons": "^4.9.0",
+		"react-tag-input": "^6.8.1",
+		"reactjs-popup": "^2.0.5",
+		"sprintf-js": "^1.1.2",
+		"tailwindcss": "^3.3.2",
+		"typescript": "^4.9.4"
+	}
 }
