--- a/renderer/tsconfig.json
+++ b/renderer/tsconfig.json
@@ -1,12 +1,5 @@
 {
-  "extends": "../tsconfig.json",
-  "include": [
-    "next-env.d.ts",
-    "types.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+	"extends": "../tsconfig.json",
+	"include": ["next-env.d.ts", "types.d.ts", "**/*.ts", "**/*.tsx"],
+	"exclude": ["node_modules"]
 }
