--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,26 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "incremental": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": "./",
-    "paths": {
-      "@components/*": [
-        "renderer/components/*"
-      ],
-      "@classes/*": [
-        "main/classes/*"
-      ],
-      "@helpers/*": [
-        "main/helpers/*"
-      ],
-      "@tools/*": [
-        "renderer/tools/*"
-      ]
-    }
-  },
-  "exclude": [
-    "node_modules",
-    "renderer/next.config.js",
-    "app",
-    "dist"
-  ]
+	"compilerOptions": {
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"strict": false,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"incremental": true,
+		"esModuleInterop": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"baseUrl": "./",
+		"paths": {
+			"@components/*": ["renderer/components/*"],
+			"@classes/*": ["main/classes/*"],
+			"@helpers/*": ["main/helpers/*"],
+			"@tools/*": ["renderer/tools/*"]
+		}
+	},
+	"exclude": ["node_modules", "renderer/next.config.js", "app", "dist"]
 }
