--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,13 @@ dist
 .idea
 .github
 .git
-yarn.lock
 .prettierignore
 .husky
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+yarn.lock
