--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
 		"sprintf-js": "^1.1.2",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^4.9.4"
+	},
+	"packageManager": "yarn@3.6.1",
+	"resolutions": {
+		"electron-log@^5.0.0-beta.24": "patch:electron-log@npm%3A5.0.0-beta.24#./.yarn/patches/electron-log-npm-5.0.0-beta.24-51cd918624.patch"
 	}
 }
