move nextjs API to image server

--- a/config/PackUI.config.json
+++ b/config/PackUI.config.json
@@ -1,6 +1,8 @@
 {
 	"$schema": "https://raw.githubusercontent.com/thijnmens/PackUI/main/schemas/PackUI.config.schema.json",
+	"version": 1,
 	"customSongsFolder": "C:\\SteamLibrary\\steamapps\\common\\A Dance of Fire and Ice\\CustomSongs",
 	"sources": ["https://be.t21c.kro.kr/packui", "https://cdn.packui.net/api/example"],
-	"language": "en_US"
+	"language": "en_US",
+	"serverPort": 24658
 }
