Export packs to zip

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"@headlessui/react": "^1.7.15",
 		"@heroicons/react": "^2.0.18",
 		"@ramonak/react-progress-bar": "^5.0.3",
+		"@types/archiver": "^5",
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.2.5",
+		"archiver": "^5.3.1",
 		"autoprefixer": "^10.4.7",
 		"decompress": "^4.2.1",
 		"download": "^8.0.0",
