Update availability notification

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -12,4 +12,5 @@ files:
 extraFiles:
     - from: .
       filter: languages
+artifactName: PackUI Setup ${version} (${os} ${arch}).exe
 publish: null
