--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "packui",
-	"version": "1.0.0",
+	"description": "AdofaiCSL pack manager for adofai",
+	"version": "0.1.0",
 	"author": "Thijnmens <thijnmens@gmail.com>",
 	"main": "app/background.js",
 	"scripts": {
@@ -25,6 +26,7 @@
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.2.5",
+		"@types/semver": "^7",
 		"archiver": "^5.3.1",
 		"autoprefixer": "^10.4.7",
 		"decompress": "^4.2.1",
@@ -56,6 +58,7 @@
 		"react-notifications": "^1.7.4",
 		"react-tag-input": "^6.8.1",
 		"reactjs-popup": "^2.0.5",
+		"semver": "^7.5.4",
 		"sprintf-js": "^1.1.2",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^4.9.4"
